      and flexibitity; a lot of complicated algorithms were replaced
      by obvious ones; as a side effect we have a noticeable speedup
      of the volume analysis
    - winx_patcomp, winx_patfind, winx_patfree, winx_wcsdup, winx_vopen,
      winx_vflush, winx_ftw_dump_file, winx_get_free_volume_regions,
      winx_add_volume_region, winx_sub_volume_region,
      winx_release_free_volume_regions functions added to zenwinx library
    - the following translations were updated:

      Portuguese(BR)

                                    ***

  Version 4.4.0  2010-09-18
  ------------------------------------------------------------------------------
    RC2:
    - history of typed commands added to the boot time interactive mode;
      navigation is possible by arrow keys, 'history' command can be used
      to list all typed commands
    - call, man and type commands added to the boot time shell
    - echo, exit, pause and set commands of the boot time shell improved
    - clearing of the failed boot flag added for reboot and shutdown at boot time
    - pending boot-off boot time script command support added,
      this removes the limitation of boot-on/off not working before reboot/shutdown
    - interactive mode at boot time now displays help split into pages
    - escape key handling added to break the boot time script execution
    - boot time commands parsing was rewritten to increase 
      reliability and flexibility of the boot time shell
    - corrected cluttered progress display if console output was redirected
    - optimized timeout for waiting for a keyboard event in boot time interface
    - the following translations were updated:

      Portuguese, Chinese (Traditional)

    - FAT formatted volumes are displayed in GUI now as FAT12/FAT16/FAT32
      instead of less informative FAT/FAT32
    - winx_heap_alloc replaced by winx_heap_alloc_ex to allow specifying flags
    - winx_heap_alloc_zero added to allow allocating memory initialized with zero