@@ -69,6 +69,7 @@ EXPORTS
 	winx_unregister_boot_exec_command@4
 	winx_dbg_print
 	winx_dbg_print_ex
+	winx_dbg_print_header
 	winx_str2time@4
 	winx_time2str@16
 	winx_xtime@0
